samples/_failures_safe/1761441234_e9f972_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88cac478.c: In function ‘main’:
./samples/SAFE/__tmp_88cac478.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
